// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`AiSuggestionBox in TextArea snapshots should match snapshot for not-started state 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "d": "M 200 72 Q 232 240 400 272 Q 232 304 200 472 Q 168 304 0 272 Q 168 240 200 72 Z M 420 4 Q 434.08 77.92 508 92 Q 434.08 106.08 420 180 Q 405.92 106.08 332 92 Q 405.92 77.92 420 4 Z M 420 348 Q 432.8 415.2 500 428 Q 432.8 440.8 420 508 Q 407.2 440.8 340 428 Q 407.2 415.2 420 348 Z",
                      },
                      "type": "Path",
                    },
                  ],
                  "props": {
                    "fill": "#092E3A",
                    "height": 16,
                    "viewBox": "0 0 512 512",
                    "width": 16,
                  },
                  "type": "Svg",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            "AI note will be generated once the session ends.",
                          ],
                          "props": {
                            "numberOfLines": 0,
                            "selectable": undefined,
                            "style": {
                              "color": "#092E3A",
                              "fontFamily": "text-regular",
                              "fontSize": 10,
                              "textAlign": "left",
                            },
                            "testID": undefined,
                          },
                          "type": "Text",
                        },
                      ],
                      "props": {},
                      "type": "View",
                    },
                  ],
                  "props": {
                    "style": {
                      "flex": 1,
                    },
                    "testID": undefined,
                  },
                  "type": "View",
                },
              ],
              "props": {
                "style": {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 4,
                  "width": "100%",
                },
                "testID": undefined,
              },
              "type": "View",
            },
          ],
          "props": {
            "style": {
              "backgroundColor": "#F2F2F2",
              "borderColor": "#CDCDCD",
              "borderRadius": 8,
              "borderWidth": 1,
              "gap": 8,
              "padding": 8,
              "width": "100%",
            },
            "testID": undefined,
          },
          "type": "View",
        },
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "accessibilityHint": "Enter text here",
                "accessibilityState": {
                  "disabled": undefined,
                },
                "aria-label": "Text input field",
                "autoCapitalize": "sentences",
                "autoCorrect": true,
                "blurOnSubmit": true,
                "enterKeyHint": undefined,
                "keyboardType": "default",
                "multiline": true,
                "nativeID": undefined,
                "numberOfLines": 1,
                "onBlur": [Function],
                "onChangeText": [Function],
                "onContentSizeChange": [Function],
                "onFocus": [Function],
                "onSubmitEditing": [Function],
                "placeholder": undefined,
                "placeholderTextColor": "#686868",
                "readOnly": undefined,
                "ref": [Function],
                "secureTextEntry": false,
                "style": {
                  "color": "#1C1C1C",
                  "flex": 1,
                  "fontFamily": "text",
                  "fontSize": 16,
                  "gap": 10,
                  "height": 40,
                  "paddingVertical": 0,
                  "width": "100%",
                },
                "testID": undefined,
                "textContentType": "none",
                "underlineColorAndroid": "transparent",
                "value": "",
              },
              "type": "TextInput",
            },
          ],
          "props": {
            "style": {
              "alignItems": "center",
              "flexDirection": "row",
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#9A9A9A",
          "borderRadius": 4,
          "borderWidth": 1,
          "flexDirection": "column",
          "gap": 10,
          "overflow": "hidden",
          "paddingHorizontal": 12,
          "paddingVertical": 8,
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "style": {
      "flexDirection": "column",
      "width": "100%",
    },
    "testID": undefined,
  },
  "type": "View",
}
`;

exports[`AiSuggestionBox in TextArea snapshots should match snapshot for generating state 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "d": "M 200 72 Q 232 240 400 272 Q 232 304 200 472 Q 168 304 0 272 Q 168 240 200 72 Z M 420 4 Q 434.08 77.92 508 92 Q 434.08 106.08 420 180 Q 405.92 106.08 332 92 Q 405.92 77.92 420 4 Z M 420 348 Q 432.8 415.2 500 428 Q 432.8 440.8 420 508 Q 407.2 440.8 340 428 Q 407.2 415.2 420 348 Z",
                      },
                      "type": "Path",
                    },
                  ],
                  "props": {
                    "fill": "#092E3A",
                    "height": 16,
                    "viewBox": "0 0 512 512",
                    "width": 16,
                  },
                  "type": "Svg",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            "AI note generation in progress...",
                          ],
                          "props": {
                            "numberOfLines": 0,
                            "selectable": undefined,
                            "style": {
                              "color": "#092E3A",
                              "fontFamily": "text-regular",
                              "fontSize": 10,
                              "textAlign": "left",
                            },
                            "testID": undefined,
                          },
                          "type": "Text",
                        },
                      ],
                      "props": {},
                      "type": "View",
                    },
                  ],
                  "props": {
                    "style": {
                      "flex": 1,
                    },
                    "testID": undefined,
                  },
                  "type": "View",
                },
              ],
              "props": {
                "style": {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 4,
                  "width": "100%",
                },
                "testID": undefined,
              },
              "type": "View",
            },
          ],
          "props": {
            "style": {
              "backgroundColor": "#EBFAFF",
              "borderColor": "#90D8F0",
              "borderRadius": 8,
              "borderWidth": 1,
              "gap": 8,
              "padding": 8,
              "width": "100%",
            },
            "testID": undefined,
          },
          "type": "View",
        },
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "accessibilityHint": "Enter text here",
                "accessibilityState": {
                  "disabled": undefined,
                },
                "aria-label": "Text input field",
                "autoCapitalize": "sentences",
                "autoCorrect": true,
                "blurOnSubmit": true,
                "enterKeyHint": undefined,
                "keyboardType": "default",
                "multiline": true,
                "nativeID": undefined,
                "numberOfLines": 1,
                "onBlur": [Function],
                "onChangeText": [Function],
                "onContentSizeChange": [Function],
                "onFocus": [Function],
                "onSubmitEditing": [Function],
                "placeholder": undefined,
                "placeholderTextColor": "#686868",
                "readOnly": undefined,
                "ref": [Function],
                "secureTextEntry": false,
                "style": {
                  "color": "#1C1C1C",
                  "flex": 1,
                  "fontFamily": "text",
                  "fontSize": 16,
                  "gap": 10,
                  "height": 40,
                  "paddingVertical": 0,
                  "width": "100%",
                },
                "testID": undefined,
                "textContentType": "none",
                "underlineColorAndroid": "transparent",
                "value": "",
              },
              "type": "TextInput",
            },
          ],
          "props": {
            "style": {
              "alignItems": "center",
              "flexDirection": "row",
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#9A9A9A",
          "borderRadius": 4,
          "borderWidth": 1,
          "flexDirection": "column",
          "gap": 10,
          "overflow": "hidden",
          "paddingHorizontal": 12,
          "paddingVertical": 8,
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "style": {
      "flexDirection": "column",
      "width": "100%",
    },
    "testID": undefined,
  },
  "type": "View",
}
`;

exports[`AiSuggestionBox in TextArea snapshots should match snapshot for ready state 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "d": "M 200 72 Q 232 240 400 272 Q 232 304 200 472 Q 168 304 0 272 Q 168 240 200 72 Z M 420 4 Q 434.08 77.92 508 92 Q 434.08 106.08 420 180 Q 405.92 106.08 332 92 Q 405.92 77.92 420 4 Z M 420 348 Q 432.8 415.2 500 428 Q 432.8 440.8 420 508 Q 407.2 440.8 340 428 Q 407.2 415.2 420 348 Z",
                      },
                      "type": "Path",
                    },
                  ],
                  "props": {
                    "fill": "#092E3A",
                    "height": 16,
                    "viewBox": "0 0 512 512",
                    "width": 16,
                  },
                  "type": "Svg",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            "AI-generated note",
                          ],
                          "props": {
                            "numberOfLines": 0,
                            "selectable": undefined,
                            "style": {
                              "color": "#092E3A",
                              "fontFamily": "text-regular",
                              "fontSize": 10,
                              "textAlign": "left",
                            },
                            "testID": undefined,
                          },
                          "type": "Text",
                        },
                      ],
                      "props": {},
                      "type": "View",
                    },
                  ],
                  "props": {
                    "style": {
                      "flex": 1,
                    },
                    "testID": undefined,
                  },
                  "type": "View",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "accessibilityLabel": "Thumbs up",
                        "accessibilityRole": "checkbox",
                        "accessibilityState": {
                          "checked": false,
                          "disabled": false,
                          "selected": false,
                        },
                        "aria-checked": false,
                        "aria-disabled": false,
                        "disabled": false,
                        "onKeyDown": [Function: AsyncFunction],
                        "onPress": [Function: AsyncFunction],
                        "style": {
                          "alignItems": "center",
                          "backgroundColor": "transparent",
                          "borderRadius": 16,
                          "height": 32,
                          "justifyContent": "center",
                          "width": 32,
                        },
                        "testID": "test-ai-suggestion-feedback-positive",
                      },
                      "type": "Pressable",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "accessibilityLabel": "Thumbs down",
                        "accessibilityRole": "checkbox",
                        "accessibilityState": {
                          "checked": false,
                          "disabled": false,
                          "selected": false,
                        },
                        "aria-checked": false,
                        "aria-disabled": false,
                        "disabled": false,
                        "onKeyDown": [Function: AsyncFunction],
                        "onPress": [Function: AsyncFunction],
                        "style": {
                          "alignItems": "center",
                          "backgroundColor": "transparent",
                          "borderRadius": 16,
                          "height": 32,
                          "justifyContent": "center",
                          "width": 32,
                        },
                        "testID": "test-ai-suggestion-feedback-negative",
                      },
                      "type": "Pressable",
                    },
                  ],
                  "props": {
                    "onPointerEnter": [Function: AsyncFunction],
                    "onPointerLeave": [Function: AsyncFunction],
                    "style": {
                      "alignItems": "center",
                      "display": "flex",
                      "flexDirection": "row",
                    },
                    "testID": "test-ai-suggestion-feedback",
                  },
                  "type": "View",
                },
              ],
              "props": {
                "style": {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 4,
                  "width": "100%",
                },
                "testID": undefined,
              },
              "type": "View",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        "AI-generated suggestion text.",
                      ],
                      "props": {
                        "numberOfLines": 0,
                        "selectable": undefined,
                        "style": {
                          "color": "#1C1C1C",
                          "fontFamily": "text-regular",
                          "fontSize": 14,
                          "textAlign": "left",
                        },
                        "testID": undefined,
                      },
                      "type": "Text",
                    },
                  ],
                  "props": {},
                  "type": "View",
                },
              ],
              "props": {
                "style": {
                  "paddingBottom": 4,
                  "width": "100%",
                },
                "testID": undefined,
              },
              "type": "View",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            {
                              "$$typeof": Symbol(react.test.json),
                              "children": [
                                "Hide",
                              ],
                              "props": {
                                "style": {
                                  "color": "#2B6072",
                                  "fontSize": 14,
                                  "fontWeight": "700",
                                },
                              },
                              "type": "Text",
                            },
                          ],
                          "props": {
                            "style": {
                              "flexDirection": "row",
                            },
                            "testID": undefined,
                          },
                          "type": "View",
                        },
                      ],
                      "props": {
                        "style": {
                          "flexDirection": "row",
                        },
                        "testID": undefined,
                      },
                      "type": "View",
                    },
                  ],
                  "props": {
                    "accessibilityHint": "Press to perform action",
                    "accessibilityLabel": "Hide",
                    "accessibilityRole": "button",
                    "accessibilityState": {
                      "disabled": false,
                    },
                    "disabled": false,
                    "onPress": [Function: debounced],
                    "style": {
                      "alignItems": "center",
                      "alignSelf": "flex-start",
                      "backgroundColor": "transparent",
                      "borderColor": undefined,
                      "borderRadius": 360,
                      "borderWidth": undefined,
                      "flexDirection": "column",
                      "height": 28,
                      "justifyContent": "center",
                      "paddingHorizontal": 16,
                      "paddingVertical": 0,
                      "width": "auto",
                    },
                    "testID": "test-ai-suggestion-hide",
                  },
                  "type": "PressableScale",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            {
                              "$$typeof": Symbol(react.test.json),
                              "children": [
                                "Add to note",
                              ],
                              "props": {
                                "style": {
                                  "color": "#FFFFFF",
                                  "fontSize": 14,
                                  "fontWeight": "700",
                                },
                              },
                              "type": "Text",
                            },
                          ],
                          "props": {
                            "style": {
                              "flexDirection": "row",
                            },
                            "testID": undefined,
                          },
                          "type": "View",
                        },
                      ],
                      "props": {
                        "style": {
                          "flexDirection": "row",
                        },
                        "testID": undefined,
                      },
                      "type": "View",
                    },
                  ],
                  "props": {
                    "accessibilityHint": "Press to perform action",
                    "accessibilityLabel": "Add to note",
                    "accessibilityRole": "button",
                    "accessibilityState": {
                      "disabled": false,
                    },
                    "disabled": false,
                    "onPress": [Function: debounced],
                    "style": {
                      "alignItems": "center",
                      "alignSelf": "flex-start",
                      "backgroundColor": "#2B6072",
                      "borderColor": undefined,
                      "borderRadius": 360,
                      "borderWidth": undefined,
                      "flexDirection": "column",
                      "height": 28,
                      "justifyContent": "center",
                      "paddingHorizontal": 16,
                      "paddingVertical": 0,
                      "width": "auto",
                    },
                    "testID": "test-ai-suggestion-add",
                  },
                  "type": "PressableScale",
                },
              ],
              "props": {
                "style": {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 8,
                  "justifyContent": "flex-end",
                  "width": "100%",
                },
                "testID": undefined,
              },
              "type": "View",
            },
          ],
          "props": {
            "style": {
              "alignItems": "flex-end",
              "backgroundColor": "#EBFAFF",
              "borderColor": "#90D8F0",
              "borderRadius": 8,
              "borderWidth": 1,
              "gap": 8,
              "padding": 8,
              "width": "100%",
            },
            "testID": "test-ai-suggestion",
          },
          "type": "View",
        },
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "accessibilityHint": "Enter text here",
                "accessibilityState": {
                  "disabled": undefined,
                },
                "aria-label": "Text input field",
                "autoCapitalize": "sentences",
                "autoCorrect": true,
                "blurOnSubmit": true,
                "enterKeyHint": undefined,
                "keyboardType": "default",
                "multiline": true,
                "nativeID": undefined,
                "numberOfLines": 1,
                "onBlur": [Function],
                "onChangeText": [Function],
                "onContentSizeChange": [Function],
                "onFocus": [Function],
                "onSubmitEditing": [Function],
                "placeholder": undefined,
                "placeholderTextColor": "#686868",
                "readOnly": undefined,
                "ref": [Function],
                "secureTextEntry": false,
                "style": {
                  "color": "#1C1C1C",
                  "flex": 1,
                  "fontFamily": "text",
                  "fontSize": 16,
                  "gap": 10,
                  "height": 40,
                  "paddingVertical": 0,
                  "width": "100%",
                },
                "testID": "test",
                "textContentType": "none",
                "underlineColorAndroid": "transparent",
                "value": "",
              },
              "type": "TextInput",
            },
          ],
          "props": {
            "style": {
              "alignItems": "center",
              "flexDirection": "row",
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#9A9A9A",
          "borderRadius": 4,
          "borderWidth": 1,
          "flexDirection": "column",
          "gap": 10,
          "overflow": "hidden",
          "paddingHorizontal": 12,
          "paddingVertical": 8,
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "style": {
      "flexDirection": "column",
      "width": "100%",
    },
    "testID": undefined,
  },
  "type": "View",
}
`;

exports[`AiSuggestionBox in TextArea snapshots should match snapshot for hidden state 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "d": "M 200 72 Q 232 240 400 272 Q 232 304 200 472 Q 168 304 0 272 Q 168 240 200 72 Z M 420 4 Q 434.08 77.92 508 92 Q 434.08 106.08 420 180 Q 405.92 106.08 332 92 Q 405.92 77.92 420 4 Z M 420 348 Q 432.8 415.2 500 428 Q 432.8 440.8 420 508 Q 407.2 440.8 340 428 Q 407.2 415.2 420 348 Z",
                      },
                      "type": "Path",
                    },
                  ],
                  "props": {
                    "fill": "#092E3A",
                    "height": 16,
                    "viewBox": "0 0 512 512",
                    "width": 16,
                  },
                  "type": "Svg",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            "AI-generated note (hidden)",
                          ],
                          "props": {
                            "numberOfLines": 0,
                            "selectable": undefined,
                            "style": {
                              "color": "#092E3A",
                              "fontFamily": "text-regular",
                              "fontSize": 10,
                              "textAlign": "left",
                            },
                            "testID": undefined,
                          },
                          "type": "Text",
                        },
                      ],
                      "props": {},
                      "type": "View",
                    },
                  ],
                  "props": {
                    "style": {
                      "flex": 1,
                    },
                    "testID": undefined,
                  },
                  "type": "View",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            {
                              "$$typeof": Symbol(react.test.json),
                              "children": [
                                {
                                  "$$typeof": Symbol(react.test.json),
                                  "children": [
                                    "Show",
                                  ],
                                  "props": {
                                    "style": {
                                      "color": "#2B6072",
                                      "fontSize": 14,
                                      "fontWeight": "700",
                                    },
                                  },
                                  "type": "Text",
                                },
                              ],
                              "props": {
                                "style": {
                                  "flexDirection": "row",
                                },
                                "testID": undefined,
                              },
                              "type": "View",
                            },
                          ],
                          "props": {
                            "style": {
                              "flexDirection": "row",
                            },
                            "testID": undefined,
                          },
                          "type": "View",
                        },
                      ],
                      "props": {
                        "accessibilityHint": "Press to perform action",
                        "accessibilityLabel": "Show",
                        "accessibilityRole": "button",
                        "accessibilityState": {
                          "disabled": false,
                        },
                        "disabled": false,
                        "onPress": [Function: debounced],
                        "style": {
                          "alignItems": "center",
                          "alignSelf": "flex-start",
                          "backgroundColor": "transparent",
                          "borderColor": undefined,
                          "borderRadius": 360,
                          "borderWidth": undefined,
                          "flexDirection": "column",
                          "height": 28,
                          "justifyContent": "center",
                          "paddingHorizontal": 16,
                          "paddingVertical": 0,
                          "width": "auto",
                        },
                        "testID": "test-ai-suggestion-show",
                      },
                      "type": "PressableScale",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": null,
                          "props": {
                            "accessibilityLabel": "Thumbs up",
                            "accessibilityRole": "checkbox",
                            "accessibilityState": {
                              "checked": false,
                              "disabled": false,
                              "selected": false,
                            },
                            "aria-checked": false,
                            "aria-disabled": false,
                            "disabled": false,
                            "onKeyDown": [Function: AsyncFunction],
                            "onPress": [Function: AsyncFunction],
                            "style": {
                              "alignItems": "center",
                              "backgroundColor": "transparent",
                              "borderRadius": 16,
                              "height": 32,
                              "justifyContent": "center",
                              "width": 32,
                            },
                            "testID": "test-ai-suggestion-feedback-positive",
                          },
                          "type": "Pressable",
                        },
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": null,
                          "props": {
                            "accessibilityLabel": "Thumbs down",
                            "accessibilityRole": "checkbox",
                            "accessibilityState": {
                              "checked": false,
                              "disabled": false,
                              "selected": false,
                            },
                            "aria-checked": false,
                            "aria-disabled": false,
                            "disabled": false,
                            "onKeyDown": [Function: AsyncFunction],
                            "onPress": [Function: AsyncFunction],
                            "style": {
                              "alignItems": "center",
                              "backgroundColor": "transparent",
                              "borderRadius": 16,
                              "height": 32,
                              "justifyContent": "center",
                              "width": 32,
                            },
                            "testID": "test-ai-suggestion-feedback-negative",
                          },
                          "type": "Pressable",
                        },
                      ],
                      "props": {
                        "onPointerEnter": [Function: AsyncFunction],
                        "onPointerLeave": [Function: AsyncFunction],
                        "style": {
                          "alignItems": "center",
                          "display": "flex",
                          "flexDirection": "row",
                        },
                        "testID": "test-ai-suggestion-feedback",
                      },
                      "type": "View",
                    },
                  ],
                  "props": {
                    "style": {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "gap": 4,
                    },
                    "testID": undefined,
                  },
                  "type": "View",
                },
              ],
              "props": {
                "style": {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 4,
                  "width": "100%",
                },
                "testID": undefined,
              },
              "type": "View",
            },
          ],
          "props": {
            "style": {
              "backgroundColor": "#EBFAFF",
              "borderColor": "#90D8F0",
              "borderRadius": 8,
              "borderWidth": 1,
              "flexDirection": "column",
              "gap": 8,
              "padding": 8,
              "width": "100%",
            },
            "testID": "test-ai-suggestion",
          },
          "type": "View",
        },
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "accessibilityHint": "Enter text here",
                "accessibilityState": {
                  "disabled": undefined,
                },
                "aria-label": "Text input field",
                "autoCapitalize": "sentences",
                "autoCorrect": true,
                "blurOnSubmit": true,
                "enterKeyHint": undefined,
                "keyboardType": "default",
                "multiline": true,
                "nativeID": undefined,
                "numberOfLines": 1,
                "onBlur": [Function],
                "onChangeText": [Function],
                "onContentSizeChange": [Function],
                "onFocus": [Function],
                "onSubmitEditing": [Function],
                "placeholder": undefined,
                "placeholderTextColor": "#686868",
                "readOnly": undefined,
                "ref": [Function],
                "secureTextEntry": false,
                "style": {
                  "color": "#1C1C1C",
                  "flex": 1,
                  "fontFamily": "text",
                  "fontSize": 16,
                  "gap": 10,
                  "height": 40,
                  "paddingVertical": 0,
                  "width": "100%",
                },
                "testID": "test",
                "textContentType": "none",
                "underlineColorAndroid": "transparent",
                "value": "",
              },
              "type": "TextInput",
            },
          ],
          "props": {
            "style": {
              "alignItems": "center",
              "flexDirection": "row",
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#9A9A9A",
          "borderRadius": 4,
          "borderWidth": 1,
          "flexDirection": "column",
          "gap": 10,
          "overflow": "hidden",
          "paddingHorizontal": 12,
          "paddingVertical": 8,
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "style": {
      "flexDirection": "column",
      "width": "100%",
    },
    "testID": undefined,
  },
  "type": "View",
}
`;

exports[`AiSuggestionBox in TextArea snapshots should match snapshot for added state 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "d": "M 200 72 Q 232 240 400 272 Q 232 304 200 472 Q 168 304 0 272 Q 168 240 200 72 Z M 420 4 Q 434.08 77.92 508 92 Q 434.08 106.08 420 180 Q 405.92 106.08 332 92 Q 405.92 77.92 420 4 Z M 420 348 Q 432.8 415.2 500 428 Q 432.8 440.8 420 508 Q 407.2 440.8 340 428 Q 407.2 415.2 420 348 Z",
                      },
                      "type": "Path",
                    },
                  ],
                  "props": {
                    "fill": "#092E3A",
                    "height": 16,
                    "viewBox": "0 0 512 512",
                    "width": 16,
                  },
                  "type": "Svg",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            "AI-generated note added!",
                          ],
                          "props": {
                            "numberOfLines": 0,
                            "selectable": undefined,
                            "style": {
                              "color": "#092E3A",
                              "fontFamily": "text-regular",
                              "fontSize": 10,
                              "textAlign": "left",
                            },
                            "testID": undefined,
                          },
                          "type": "Text",
                        },
                      ],
                      "props": {},
                      "type": "View",
                    },
                  ],
                  "props": {
                    "style": {
                      "flex": 1,
                    },
                    "testID": undefined,
                  },
                  "type": "View",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            {
                              "$$typeof": Symbol(react.test.json),
                              "children": [
                                {
                                  "$$typeof": Symbol(react.test.json),
                                  "children": [
                                    "Show",
                                  ],
                                  "props": {
                                    "style": {
                                      "color": "#2B6072",
                                      "fontSize": 14,
                                      "fontWeight": "700",
                                    },
                                  },
                                  "type": "Text",
                                },
                              ],
                              "props": {
                                "style": {
                                  "flexDirection": "row",
                                },
                                "testID": undefined,
                              },
                              "type": "View",
                            },
                          ],
                          "props": {
                            "style": {
                              "flexDirection": "row",
                            },
                            "testID": undefined,
                          },
                          "type": "View",
                        },
                      ],
                      "props": {
                        "accessibilityHint": "Press to perform action",
                        "accessibilityLabel": "Show",
                        "accessibilityRole": "button",
                        "accessibilityState": {
                          "disabled": false,
                        },
                        "disabled": false,
                        "onPress": [Function: debounced],
                        "style": {
                          "alignItems": "center",
                          "alignSelf": "flex-start",
                          "backgroundColor": "transparent",
                          "borderColor": undefined,
                          "borderRadius": 360,
                          "borderWidth": undefined,
                          "flexDirection": "column",
                          "height": 28,
                          "justifyContent": "center",
                          "paddingHorizontal": 16,
                          "paddingVertical": 0,
                          "width": "auto",
                        },
                        "testID": "test-ai-suggestion-show",
                      },
                      "type": "PressableScale",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": null,
                          "props": {
                            "accessibilityLabel": "Thumbs up",
                            "accessibilityRole": "checkbox",
                            "accessibilityState": {
                              "checked": true,
                              "disabled": false,
                              "selected": true,
                            },
                            "aria-checked": true,
                            "aria-disabled": false,
                            "disabled": false,
                            "onKeyDown": [Function: AsyncFunction],
                            "onPress": [Function: AsyncFunction],
                            "style": {
                              "alignItems": "center",
                              "backgroundColor": "transparent",
                              "borderRadius": 16,
                              "height": 32,
                              "justifyContent": "center",
                              "width": 32,
                            },
                            "testID": "test-ai-suggestion-feedback-positive",
                          },
                          "type": "Pressable",
                        },
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": null,
                          "props": {
                            "accessibilityLabel": "Thumbs down",
                            "accessibilityRole": "checkbox",
                            "accessibilityState": {
                              "checked": false,
                              "disabled": false,
                              "selected": false,
                            },
                            "aria-checked": false,
                            "aria-disabled": false,
                            "disabled": false,
                            "onKeyDown": [Function: AsyncFunction],
                            "onPress": [Function: AsyncFunction],
                            "style": {
                              "alignItems": "center",
                              "backgroundColor": "transparent",
                              "borderRadius": 16,
                              "height": 32,
                              "justifyContent": "center",
                              "width": 32,
                            },
                            "testID": "test-ai-suggestion-feedback-negative",
                          },
                          "type": "Pressable",
                        },
                      ],
                      "props": {
                        "onPointerEnter": [Function: AsyncFunction],
                        "onPointerLeave": [Function: AsyncFunction],
                        "style": {
                          "alignItems": "center",
                          "display": "flex",
                          "flexDirection": "row",
                        },
                        "testID": "test-ai-suggestion-feedback",
                      },
                      "type": "View",
                    },
                  ],
                  "props": {
                    "style": {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "gap": 4,
                    },
                    "testID": undefined,
                  },
                  "type": "View",
                },
              ],
              "props": {
                "style": {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 4,
                  "width": "100%",
                },
                "testID": undefined,
              },
              "type": "View",
            },
          ],
          "props": {
            "style": {
              "backgroundColor": "#DCF2E2",
              "borderColor": "#3EA45C",
              "borderRadius": 8,
              "borderWidth": 1,
              "flexDirection": "column",
              "gap": 8,
              "padding": 8,
              "width": "100%",
            },
            "testID": "test-ai-suggestion",
          },
          "type": "View",
        },
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "accessibilityHint": "Enter text here",
                "accessibilityState": {
                  "disabled": undefined,
                },
                "aria-label": "Text input field",
                "autoCapitalize": "sentences",
                "autoCorrect": true,
                "blurOnSubmit": true,
                "enterKeyHint": undefined,
                "keyboardType": "default",
                "multiline": true,
                "nativeID": undefined,
                "numberOfLines": 1,
                "onBlur": [Function],
                "onChangeText": [Function],
                "onContentSizeChange": [Function],
                "onFocus": [Function],
                "onSubmitEditing": [Function],
                "placeholder": undefined,
                "placeholderTextColor": "#686868",
                "readOnly": undefined,
                "ref": [Function],
                "secureTextEntry": false,
                "style": {
                  "color": "#1C1C1C",
                  "flex": 1,
                  "fontFamily": "text",
                  "fontSize": 16,
                  "gap": 10,
                  "height": 40,
                  "paddingVertical": 0,
                  "width": "100%",
                },
                "testID": "test",
                "textContentType": "none",
                "underlineColorAndroid": "transparent",
                "value": "",
              },
              "type": "TextInput",
            },
          ],
          "props": {
            "style": {
              "alignItems": "center",
              "flexDirection": "row",
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#9A9A9A",
          "borderRadius": 4,
          "borderWidth": 1,
          "flexDirection": "column",
          "gap": 10,
          "overflow": "hidden",
          "paddingHorizontal": 12,
          "paddingVertical": 8,
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "style": {
      "flexDirection": "column",
      "width": "100%",
    },
    "testID": undefined,
  },
  "type": "View",
}
`;
